--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,18 +14,10 @@ body {
   padding: 20px;
 }
 
-.main-header-top-bar {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.main-header-top-bar * {
-  margin: 5px 0;
-}
-
 .main-logo {
-  max-width: 200px;
+  display: flex;
+  margin: 0 auto 20px;
+  max-width: 200px;  
 }
 
 .search-header {
@@ -74,8 +66,26 @@ body {
   MAIN -----------------------------
 */
 .main-content {
-  background-color: gray;
+  background-color: #ebebeb;
   text-align: center;
+}
+
+.main-content-section {
+  max-width: 1200px;
+  margin: auto;
+}
+
+.main-contnet-banner {
+  max-width: 100%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.banner {
+  width: 100%;
+  min-width: 400px;
+  max-width: 1200px;  
 }
 
 .main-content section {
@@ -85,15 +95,14 @@ body {
 .content-articles {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .main-content-article {
   background-color: white;
-  width: 90%;
-  max-width: 300px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding: 5px 0;
+  width: 250px;
 }
 
 .article-info {
@@ -130,12 +139,12 @@ body {
 }
 
 .article-price {
-  flex-grow: 0.3;
+  flex-grow: 0.2;
 }
 
 .article-off {
   font-weight: 700;
-  flex-grow: 0.7;
+  flex-grow: 0.8;
   font-size: 14px;
   align-self: center;
 }
@@ -148,35 +157,37 @@ body {
   FOOTER -----------------------------
 */
 
-#footer-ml {
+#footer-mercadoliebre {
   text-align: center;
   background-color: #EAC926;
-  padding: 10px 0;
+  padding: 40px 10px 5px;
 }
 
-#footer-ml > section {
+#footer-mercadoliebre > section {
   margin-bottom: 40px;
 }
 
-#footer-ml > section > i {
+#footer-mercadoliebre > section > i {
   color: #03264C;
   font-size: 40px;
+}
+
+.footer-copyright {
+  font-size: 12px;
 }
 
 /**
   MEDIA -----------------------------
 */
-@media (min-width: 361px) {
-  /**
-  h2 {
-    text-align: left;
-    width: 90%;
-    margin: auto;
-    padding-bottom: 10px;
-  }
-  */ 
+@media (min-width: 481px) {
   .main-header-top-bar {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+  }
+
+  .main-logo {
+    margin: 0 auto;
   }
 
   .main-navbar {
@@ -189,7 +200,8 @@ body {
 
   .main-content-article {
     box-shadow: 0px 0px 10px rgb(100, 100, 100);
-    flex-grow: 0.5;
+    width: 45%;
+    max-width: 300px;
   }
 
   .main-logo {
@@ -209,11 +221,7 @@ body {
   }
 }
 
-@media (min-width: 769px) {
-  .main-content-article {
-    flex-grow: 0.25;
-  }
-
+@media (min-width: 800px) {
   .copy-header {
     max-width: 350px;
     text-align: right;
@@ -232,6 +240,16 @@ body {
   .main-navbar li {
     margin: 0 5px;
   }
+
+  .main-content-article {
+    width: 20%;
+    max-width: 250px;
+  }
+
+  .article-image {
+    width: 100%;
+    max-width: 200px;
+  }  
 }
 
 @media (min-width: 1200px) {
