--- a/views/home.html
+++ b/views/home.html
@@ -4,13 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>Clase 17 | Practico</title>
+  <title>Mercado Liebre | Home</title>
   <!-- Styles -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
   <!-- Icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
@@ -38,131 +36,137 @@
 
     <nav class="main-navbar">
       <ul class="left-navbar">
-        <li><a href="#">Ofertas</a></li>
+        <li><a href="/">Ofertas</a></li>
         <li><a href="#">Tiendas Oficiales</a></li>
         <li><a href="#">Vender</a></li>
         <li><a href="#">Ayuda</a></li>
       </ul>
 
       <ul class="right-navbar">
-        <li><a href="#">Creá tu cuenta <i class="fas fa-credit-card"></i></a></li>
-        <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+        <li><a href="/register">Creá tu cuenta <i class="fas fa-credit-card"></i></a></li>
+        <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
         <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
       </ul>
     </nav>
   </header>
 
   <main class="main-content">
-    <section class="main-content-last-view">
-      <h2>Basado en tu última visita</h2>
-
-      <div class="content-articles">
-        <article class="main-content-article">
-          <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$6.770</p>
-              <p class="article-off">40% OFF</p>
-            </div>
-            <p class="article-description"><strong>Cafetera Moulinex</strong></p>
-          </div>
-        </article>
-
-        <article class="main-content-article">
-          <img src="images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$230.000</p>
-              <p class="article-off">20% OFF</p>
-            </div>
-            <p class="article-description"><strong>MacBook Pro 2019</strong></p>
-          </div>
-        </article>
-
-        <article class="main-content-article">
-          <img src="images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$70.500</p>
-              <p class="article-off">10% OFF</p>
-            </div>
-            <p class="article-description"><strong>Samsung Galaxy S10</strong></p>
-          </div>
-        </article>
-
-        <article class="main-content-article">
-          <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$23.200</p>
-              <p class="article-off">5% OFF</p>
-            </div>
-            <p class="article-description"><strong>SmartTv Samsung 43"</strong></p>
-          </div>
-        </article>
+    <div class="main-content-section">
+      <div class="main-contnet-banner">
+        <img src="images/img-home-banner.jpg" alt="Banner" class="banner">
       </div>
-    </section>
 
-    <section class="main-content-section-off">
-      <h2>Sección de Ofertas</h2>
+      <section class="main-content-last-view">
+        <h2>Basado en tu última visita</h2>
 
-      <div class="content-articles">
-        <article class="main-content-article">
-          <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$6.770</p>
-              <p class="article-off">40% OFF</p>
+        <div class="content-articles">
+          <article class="main-content-article">
+            <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$6.770</p>
+                <p class="article-off">40% OFF</p>
+              </div>
+              <p class="article-description"><strong>Cafetera Moulinex</strong></p>
             </div>
-            <p class="article-description"><strong>Cafetera Moulinex</strong></p>
-          </div>
-        </article>
+          </article>
 
-        <article class="main-content-article">
-          <img src="images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$230.000</p>
-              <p class="article-off">20% OFF</p>
+          <article class="main-content-article">
+            <img src="images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$230.000</p>
+                <p class="article-off">20% OFF</p>
+              </div>
+              <p class="article-description"><strong>MacBook Pro 2019</strong></p>
             </div>
-            <p class="article-description"><strong>MacBook Pro 2019</strong></p>
-          </div>
-        </article>
+          </article>
 
-        <article class="main-content-article">
-          <img src="images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$70.500</p>
-              <p class="article-off">10% OFF</p>
+          <article class="main-content-article">
+            <img src="images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$70.500</p>
+                <p class="article-off">10% OFF</p>
+              </div>
+              <p class="article-description"><strong>Samsung Galaxy S10</strong></p>
             </div>
-            <p class="article-description"><strong>Samsung Galaxy S10</strong></p>
-          </div>
-        </article>
+          </article>
 
-        <article class="main-content-article">
-          <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" class="article-image">
-          <div class="article-info">
-            <i class="fas fa-truck"></i>
-            <div>
-              <p class="article-price">$23.200</p>
-              <p class="article-off">5% OFF</p>
+          <article class="main-content-article">
+            <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$23.200</p>
+                <p class="article-off">5% OFF</p>
+              </div>
+              <p class="article-description"><strong>SmartTv Samsung 43"</strong></p>
             </div>
-            <p class="article-description"><strong>SmartTv Samsung 43"</strong></p>
-          </div>
-        </article>
-      </div>
-    </section>
+          </article>
+        </div>
+      </section>
+
+      <section class="main-content-section-off">
+        <h2>Sección de Ofertas</h2>
+
+        <div class="content-articles">
+          <article class="main-content-article">
+            <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera Moulinex" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$6.770</p>
+                <p class="article-off">40% OFF</p>
+              </div>
+              <p class="article-description"><strong>Cafetera Moulinex</strong></p>
+            </div>
+          </article>
+
+          <article class="main-content-article">
+            <img src="images/img-macbook-pro-2019.jpg" alt="MacBook Pro 2019" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$230.000</p>
+                <p class="article-off">20% OFF</p>
+              </div>
+              <p class="article-description"><strong>MacBook Pro 2019</strong></p>
+            </div>
+          </article>
+
+          <article class="main-content-article">
+            <img src="images/img-samsung-galaxy-s10.jpg" alt="Samsung Galaxy S10" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$70.500</p>
+                <p class="article-off">10% OFF</p>
+              </div>
+              <p class="article-description"><strong>Samsung Galaxy S10</strong></p>
+            </div>
+          </article>
+
+          <article class="main-content-article">
+            <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung 43" class="article-image">
+            <div class="article-info">
+              <i class="fas fa-truck"></i>
+              <div>
+                <p class="article-price">$23.200</p>
+                <p class="article-off">5% OFF</p>
+              </div>
+              <p class="article-description"><strong>SmartTv Samsung 43"</strong></p>
+            </div>
+          </article>
+        </div>
+      </section>
+    </div>
   </main>
 
-  <footer id="footer-ml">
+  <footer id="footer-mercadoliebre">
     <section>
       <i class="fas fa-credit-card"></i>
       <h4>Pagá con tarjeta o en efectivo</h4>
@@ -184,7 +188,7 @@
         porque estás siempre protegid@.</p>
     </section>
 
-    <section>
+    <section class="footer-copyright">
       <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </section>
   </footer>
