--- a/views/home.html
+++ b/views/home.html
@@ -68,7 +68,7 @@
                 <p class="article-price">$6.770</p>
                 <p class="article-off">40% OFF</p>
               </div>
-              <p class="article-description"><strong>Cafetera Moulinex</strong></p>
+              <p class="article-description">Cafetera Moulinex</p>
             </div>
           </article>
 
@@ -80,7 +80,7 @@
                 <p class="article-price">$230.000</p>
                 <p class="article-off">20% OFF</p>
               </div>
-              <p class="article-description"><strong>MacBook Pro 2019</strong></p>
+              <p class="article-description">MacBook Pro 2019</p>
             </div>
           </article>
 
@@ -92,7 +92,7 @@
                 <p class="article-price">$70.500</p>
                 <p class="article-off">10% OFF</p>
               </div>
-              <p class="article-description"><strong>Samsung Galaxy S10</strong></p>
+              <p class="article-description">Samsung Galaxy S10</p>
             </div>
           </article>
 
@@ -104,7 +104,7 @@
                 <p class="article-price">$23.200</p>
                 <p class="article-off">5% OFF</p>
               </div>
-              <p class="article-description"><strong>SmartTv Samsung 43"</strong></p>
+              <p class="article-description">SmartTv Samsung 43"</p>
             </div>
           </article>
         </div>
@@ -122,7 +122,7 @@
                 <p class="article-price">$6.770</p>
                 <p class="article-off">40% OFF</p>
               </div>
-              <p class="article-description"><strong>Cafetera Moulinex</strong></p>
+              <p class="article-description">Cafetera Moulinex</p>
             </div>
           </article>
 
@@ -134,7 +134,7 @@
                 <p class="article-price">$230.000</p>
                 <p class="article-off">20% OFF</p>
               </div>
-              <p class="article-description"><strong>MacBook Pro 2019</strong></p>
+              <p class="article-description">MacBook Pro 2019</p>
             </div>
           </article>
 
@@ -146,7 +146,7 @@
                 <p class="article-price">$70.500</p>
                 <p class="article-off">10% OFF</p>
               </div>
-              <p class="article-description"><strong>Samsung Galaxy S10</strong></p>
+              <p class="article-description">Samsung Galaxy S10</p>
             </div>
           </article>
 
@@ -158,7 +158,7 @@
                 <p class="article-price">$23.200</p>
                 <p class="article-off">5% OFF</p>
               </div>
-              <p class="article-description"><strong>SmartTv Samsung 43"</strong></p>
+              <p class="article-description">SmartTv Samsung 43"</p>
             </div>
           </article>
         </div>
@@ -167,30 +167,34 @@
   </main>
 
   <footer id="footer-mercadoliebre">
-    <section>
-      <i class="fas fa-credit-card"></i>
-      <h4>Pagá con tarjeta o en efectivo</h4>
-      <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-        puntos de pago. ¡Y siempre es seguro!</p>
-    </section>
-
-    <section>
-      <i class="fas fa-gift"></i>
-      <h4>Envío gratis desde $ 2.500</h4>
-      <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-        productos. Es un beneficio de Mercado Puntos.</p>
-    </section>
-
-    <section>
-      <i class="fas fa-user-shield"></i>
-      <h4>Seguridad, de principio a fin</h4>
-      <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-        porque estás siempre protegid@.</p>
-    </section>
-
-    <section class="footer-copyright">
-      <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-    </section>
+    <div class="footer-content">
+      <section class="footer-info">
+        <div>
+          <i class="fas fa-credit-card"></i>
+          <h4>Pagá con tarjeta o en efectivo</h4>
+          <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+            puntos de pago. ¡Y siempre es seguro!</p>
+        </div>
+    
+        <div>
+          <i class="fas fa-gift"></i>
+          <h4>Envío gratis desde $ 2.500</h4>
+          <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            productos. Es un beneficio de Mercado Puntos.</p>
+        </div>
+    
+        <div>
+          <i class="fas fa-user-shield"></i>
+          <h4>Seguridad, de principio a fin</h4>
+          <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            porque estás siempre protegid@.</p>
+        </div>
+      </section>   
+  
+      <section class="footer-copyright">
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+      </section>
+    </div>
   </footer>
 </body>
 
