--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,20 +11,56 @@ body {
 */
 .main-header {
   background-color: #EAC926;
-  padding: 20px;
+  padding: 10px 20px;
 }
 
 .main-logo {
   display: flex;
   margin: 0 auto 20px;
-  max-width: 200px;  
+  max-width: 150px;  
 }
 
 .search-header {
-  background-color: white;
-  border-radius: 5px;
-  padding: 5px;
+  display: flex;
+  justify-content: center;
   align-self: center;
+}
+
+.search__field {
+  width: 90%;
+}
+
+#search__product {
+  background-color: white;
+  border-radius: 2px;
+  padding: 0 50px 0 10px;
+  width: 100%;
+  font-size: 16px;
+}
+
+#search__product:focus {
+  border: 2px solid #007bff;
+  outline: none;
+  box-shadow: 0 0 5px #007bff;
+}
+
+#search__product,
+.search__button { 
+  height: 40px; 
+  border: none;
+}
+
+.button_content {
+  position: relative;  
+}
+
+.search__button {
+  background-color: transparent;
+  border-left: 1px solid rgb(0, 0, 0, 0.05);
+  width: 40px;
+  cursor: pointer;
+  position: absolute;
+  left: -40px;  
 }
 
 .copy-header {
@@ -109,6 +145,7 @@ body {
 
 .main-content-article:hover {
   box-shadow: 0px 4px 4px 2px rgb(100, 100, 100, 0.5);
+  cursor: pointer;
 }
 
 .main-content-article:hover .article-description {
