--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,7 @@
 .main-content-form {
   background-color: #ebebeb;
-  padding: 10px 10px 191px;
+  padding: 10px 10px;
+  height: 546px;
 }
 
 .main-content-form > h2 {
@@ -28,7 +29,15 @@
 
 .box__field {
   width: 100%;
-  height: 30px;
+  height: 40px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.box__field:focus {
+  border: 2px solid #007bff;
+  outline: none;
+  box-shadow: 0 0 5px #007bff;
 }
 
 .form__buttons {
