--- a/views/register.html
+++ b/views/register.html
@@ -20,10 +20,15 @@
     <div class="main-header-top-bar">
       <img src="images/logo-mercado-liebre.svg" alt="Logo Mercado Liebre" class="main-logo">
 
-      <div class="search-header">
-        <i class="fas fa-search"></i>
-        Buscar productos, marcas
-      </div>
+      <form class="search-header" action="/" method="GET">
+        <div class="search__field">
+          <input type="text" name="search" id="search__product" placeholder="Buscar productos, marcas...">
+        </div>
+
+        <div class="button_content">
+          <button type="submit" class="search__button"><i class="fas fa-search"></i></button>
+        </div>
+      </form>
 
       <h2 class="copy-header">
         <i class="fas fa-hand-holding-usd"></i>
