Fix botones de formularios

--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
 
       <form class="search-header" action="/" method="GET">
         <div class="search__field">
-          <input type="text" name="search" id="search__product" placeholder="Buscar productos, marcas...">
+          <input type="search" name="search" id="search__product" placeholder="Buscar productos, marcas...">
         </div>
 
         <div class="button_content">
