--- a/views/register.html
+++ b/views/register.html
@@ -144,7 +144,7 @@
       </div>
 
       <div class="form__buttons">
-        <button type="reset" class="form__button_reset">Borrar</button>
+        <button type="reset" class="form__button_reset">Limpiar</button>
         <button type="submit" class="form__button_submit">Enviar</button>
       </div>
     </form>
