--- a/views/login.html
+++ b/views/login.html
@@ -73,7 +73,7 @@
       </div>
 
       <div class="form__buttons">
-        <button type="submit" class="form__button_submit">Enviar</button>
+        <button type="submit" class="form__button_submit">Ingresar</button>
       </div>
     </form>
   </main>
